Update the markup and stying for the desktop image because it wasn't aligning correctly.

--- a/intro-app/src/components/Intro/css/intro.css
+++ b/intro-app/src/components/Intro/css/intro.css
@@ -1,7 +1,6 @@
 .headline {
   font-weight: 800;
 }
-
 .content {
   text-align: center;
 }
@@ -13,7 +12,35 @@
   border-radius: 15px;
 }
 
-@media (min-width: 800px) {
+@media screen and (min-width: 768px) {
+  .reverse {
+    display: flex;
+    flex-direction: row-reverse;
+    border: 3px solid green !important;
+  }
+  .content {
+    text-align: left;
+    height: 600px;
+    max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    border: 2px solid orange;
+  }
+  .content > p {
+    margin-top: 1.5rem !important;
+  }
+  .content > div.container {
+    padding-left: 0rem !important;
+  }
+  .image {
+    max-width: 100%;
+    border: 2px solid blue;
+  }
+  .headline > span {
+    display: block;
+  }
+}
+/* @media (min-width: 800px) {
   .content {
     text-align: left;
     margin-top: auto;
@@ -26,13 +53,19 @@
   .content > button {
     margin-top: 2rem !important;
   }
-  .content > div.container {
-    padding-left: 0rem !important;
-  }
+  
   .headline {
     font-size: 4rem;
   }
-  .headline > span {
-    display: block;
+  
+  .reverse {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+    padding-right: 8rem;
+    padding-left: 8rem;
+    margin-right: auto;
+    margin-left: auto;
   }
-}
+} */
+
